--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/com/my/desinger/future/Client.java=UTF-8
 encoding//src/com/my/desinger/future/FutureTest.java=UTF-8
+encoding//src/main/resources=UTF-8
+encoding/<project>=UTF-8
